--- a/style.css
+++ b/style.css
@@ -1,9 +1,39 @@
 @import url('./shared/shared-style.css');
 
+.search-container {
+    padding: 1rem 0px 0px 0px;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
+.search-bar {
+    width: 80%;
+    padding: 12px 20px;
+    font-size: 16px;
+    border: 2px solid #ddd;
+    border-radius: 50px;
+    outline: none;
+    transition: border-color 0.3s;
+    box-sizing: border-box;
+}
+
+.search-bar:focus {
+    border-color: #4b4520;
+}
+
+.no-results {
+    text-align: center;
+    padding: 40px;
+    color: #666;
+    font-size: 18px;
+}
+
 .bookshelf-container {
     max-width: 1400px;
     margin: 0 auto;
-    padding: 3rem 2rem;
+    padding: 1rem 2rem;
 }
 
 .shelf {
@@ -62,6 +92,7 @@
 }
 .book-card {
     display: flex;
+    position: relative;
     gap: 2rem;
     background: #a4624d;
     padding: 1.5rem;
@@ -103,9 +134,10 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     text-decoration: none;
     color: #333;
+    z-index: 10;
 }
 .book-info {
     flex: 1;
@@ -151,10 +183,6 @@
 }
 
 @media (max-width: 768px) {
-    header h1 {
-        font-size: 2rem;
-    }
-
     .book-card {
         flex-direction: column;
         align-items: center;
