--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
     text-decoration: none;
     color: #333;
     z-index: 10;
@@ -195,20 +195,18 @@
     }
 }
 .prev-btn, .next-btn {
-    background-color: #92ada4;
+    background-color: #92ada400;
     color: #172015;
     border: none;
     padding: 10px 20px;
     margin: 10px;
     border-radius: 10px;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.5rem;
     transition: background-color 0.3s ease;
 }
 .prev-btn:hover:not(:disabled), .next-btn:hover:not(:disabled) {
-    background-color:#3b4743 ;
     transform: perspective(1.3 );
-    color: aliceblue;
 }
 .prev-btn:disabled, .next-btn:disabled {
     background-color: #cccccc00;
