--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('./shared/shared-style.css');
+@import url('./shared/shared.css');
 
 .search-container {
     padding: 1rem 0px 0px 0px;
