--- a/shared/shared.css
+++ b/shared/shared.css
@@ -41,3 +41,20 @@ header h1 {
         font-size: 4rem;
     }
 }
+
+.actions{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    font-size: 1.5rem;
+    text-decoration: none;
+    color:  #c17b49;
+    z-index: 10;
+    border-radius: 5px;
+    width: 30px;
+    height: 30px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    line-height: 30px;
+    text-align: center;
+    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
+}
