--- a/shared/shared.css
+++ b/shared/shared.css
@@ -53,7 +53,7 @@ header h1 {
     border-radius: 5px;
     width: 30px;
     height: 30px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.5);
+    box-shadow: 2px 2px 4px  #8b45139b;
     line-height: 30px;
     text-align: center;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.7);
